--- a/src/components/Form/Checkbox/Checkbox.module.scss
+++ b/src/components/Form/Checkbox/Checkbox.module.scss
@@ -1,8 +1,6 @@
 .root {
-  position: relative;
   display: inline-flex;
   align-items: center;
-  font-size: 3rem;
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -19,10 +17,11 @@
 }
 
 .checkmark {
+  position: relative;
   display: block;
   width: 1.25em;
   height: 1.25em;
-  border: 2px solid var(--color-gray-100);
+  border: 0.125em solid var(--color-gray-100);
   border-radius: 0.125em;
   transition: 150ms ease;
 }
@@ -30,22 +29,22 @@
 /* When the checkbox is checked, add a blue background */
 .input:checked ~ .checkmark {
   background-color: var(--color-primary-500);
-  border: 2px solid var(--color-primary-500);
+  border: 0.125em solid var(--color-primary-500);
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
 .checkmark::after {
   position: absolute;
-  top: 4px;
-  left: 6.5px;
+  top: 0;
+  left: 0.32em;
   display: none;
-  width: 7px;
-  height: 13px;
+  width: 0.4em;
+  height: 0.8em;
   content: '';
   border: solid white;
-  border-width: 0 2px 2px 0;
-  -webkit-transform: rotate(45deg);
+  border-width: 0 0.125em 0.125em 0;
   -ms-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
 }
 
