--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -15,12 +15,15 @@ p,
 figure,
 blockquote,
 dl,
-dd {
+dd,
+ul,
+ol {
   margin: 0;
 }
 
-ul[role='list'],
-ol[role='list'] {
+ul,
+ol {
+  padding: 0;
   list-style: none;
 }
 
