--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -1,30 +1,47 @@
+.horizontal {
+  display: block;
+}
+
 .tablist {
   display: flex;
   border-bottom: solid 1px var(--color-gray-300);
-
-  &[aria-orientation='vertical'] {
-    flex-direction: column;
-  }
 }
 
 .tab {
-  display: flex;
-  flex: 1;
   justify-content: center;
   padding: 0.2rem 1rem;
   margin-bottom: -1px;
-  background: inherit;
   border: solid 1px transparent;
+  transition: 0.2s;
 
   &[aria-selected='true'] {
     color: var(--color-primary-500);
     border: solid 1px var(--color-gray-300);
-    border-bottom: solid 1px white;
+    border-block-end: solid 2px var(--color-primary-500);
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
   }
+
+  &:hover {
+    background: var(--color-gray-100);
+  }
+}
+
+// タブを横幅いっぱいに
+.isFitted .tab {
+  display: flex;
+  flex: 1;
 }
 
 .vertical {
   display: flex;
+}
+
+.tablist[aria-orientation='vertical'] {
+  flex-direction: column;
+  border: none;
+
+  .tab {
+    border: none;
+  }
 }
