--- a/src/components/Spinner/Spinner.module.scss
+++ b/src/components/Spinner/Spinner.module.scss
@@ -3,16 +3,43 @@
   top: 50%;
   left: 50%;
   z-index: 2;
-  width: 100px;
-  height: 100px;
+  width: var(--size-spinner);
+  height: var(--size-spinner);
   margin: -25px 0 0 -25px;
   animation: rotate 2s linear infinite;
+
+  &[data-size='sm'] {
+    --size-spinner: 1.5rem;
+  }
+
+  &[data-size='md'] {
+    --size-spinner: 3rem;
+  }
+
+  &[data-size='lg'] {
+    --size-spinner: 5rem;
+  }
 }
 
 .path {
-  stroke: hsl(220, 88%, 55%);
   stroke-linecap: round;
   animation: dash 1.5s ease-in-out infinite;
+
+  &[data-color='primary'] {
+    stroke: var(--color-primary-500);
+  }
+
+  &[data-color='secondary'] {
+    stroke: var(--color-secondary-500);
+  }
+
+  &[data-color='gray-100'] {
+    stroke: var(--color-gray-100);
+  }
+
+  &[data-color='gray-900'] {
+    stroke: var(--color-gray-900);
+  }
 }
 
 @keyframes rotate {
