--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -14,6 +14,13 @@
   &:focus {
     box-shadow: 0 0 3px 2px var(--color-primary-300);
   }
+
+  &:disabled {
+    cursor: not-allowed;
+    box-shadow: none;
+    opacity: 0.4;
+    transform: none;
+  }
 }
 
 .sm {
