--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,5 +1,7 @@
 .root {
   display: inline-flex;
+  align-items: center;
+  justify-content: center;
   font-size: clamp(0.875rem, 2.5vw, 1.2rem);
   border: 1px solid transparent;
   outline: transparent solid 2px;
@@ -8,7 +10,7 @@
 
   &:hover {
     box-shadow: 0 5px 10px var(--color-gray-300);
-    transform: translateY(-3px);
+    // transform: translateY(-3px);
   }
 
   &:focus {
@@ -83,4 +85,17 @@
 
 .square {
   border-radius: 0;
+}
+
+.icon {
+  display: inline-flex;
+  width: clamp(0.875rem, 2.5vw, 1.2rem);
+}
+
+.icon__start {
+  margin-right: 0.5em;
+}
+
+.icon__end {
+  margin-left: 0.5em;
 }
