feat: marginにmedia queryを追加

--- a/src/styles/base/Utils.module.scss
+++ b/src/styles/base/Utils.module.scss
@@ -1,3 +1,5 @@
+@use './breakpoints' as *;
+
 // Margin & padding classes
 $spaceamounts: (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12);
 
@@ -22,6 +24,54 @@ $spaceamounts: (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12);
   }
   .ml_#{$space} {
     margin-left: $space * 0.25rem;
+  }
+
+  @include mq(sm) {
+    .sm\:m_#{$space} {
+      margin: $space * 0.25rem;
+    }
+    .sm\:mx_#{$space} {
+      margin: 0 $space * 0.25rem;
+    }
+    .sm\:my_#{$space} {
+      margin: $space * 0.25rem 0;
+    }
+    .sm\:mt_#{$space} {
+      margin-top: $space * 0.25rem;
+    }
+    .sm\:mr_#{$space} {
+      margin-right: $space * 0.25rem;
+    }
+    .sm\:mb_#{$space} {
+      margin-bottom: $space * 0.25rem;
+    }
+    .sm\:ml_#{$space} {
+      margin-left: $space * 0.25rem;
+    }
+  }
+
+  @include mq(md) {
+    .md\:m_#{$space} {
+      margin: $space * 0.25rem;
+    }
+    .md\:mx_#{$space} {
+      margin: 0 $space * 0.25rem;
+    }
+    .md\:my_#{$space} {
+      margin: $space * 0.25rem 0;
+    }
+    .md\:mt_#{$space} {
+      margin-top: $space * 0.25rem;
+    }
+    .md\:mr_#{$space} {
+      margin-right: $space * 0.25rem;
+    }
+    .md\:mb_#{$space} {
+      margin-bottom: $space * 0.25rem;
+    }
+    .md\:ml_#{$space} {
+      margin-left: $space * 0.25rem;
+    }
   }
 
   .p_#{$space} {
