--- a/src/components/Form/Checkbox/Checkbox.module.scss
+++ b/src/components/Form/Checkbox/Checkbox.module.scss
@@ -1,58 +1,38 @@
 .root {
+  --color-checkbox: var(--color-primary-500);
+
   display: inline-flex;
   align-items: center;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+}
+
+.control {
+  display: grid;
+  flex: 0 0 auto;
+  place-items: center;
+  width: 1.25em;
+  height: 1.25em;
+  margin-right: 0.5em;
+  border: 2px solid var(--color-gray-900);
+}
+
+.icon {
+  width: 90%;
+  stroke: var(--color-checkbox);
+  transform: scale(0);
 }
 
 .input {
-  position: absolute;
-  width: 0;
-  height: 0;
-  cursor: pointer;
-  opacity: 0;
-}
+  &:focus + .control {
+    background: var(--color-gray-100);
+    border: 2px solid var(--color-checkbox);
+    box-shadow: 0 0 0.2em 0.1em var(--color-checkbox);
+  }
 
-.checkmark {
-  position: relative;
-  display: block;
-  width: 1.25em;
-  height: 1.25em;
-  border: 0.125em solid var(--color-gray-100);
-  border-radius: 0.125em;
-  transition: 150ms ease;
-}
-
-/* When the checkbox is checked, add a blue background */
-.input:checked ~ .checkmark {
-  background-color: var(--color-primary-500);
-  border: 0.125em solid var(--color-primary-500);
-}
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark::after {
-  position: absolute;
-  top: 0;
-  left: 0.32em;
-  display: none;
-  width: 0.4em;
-  height: 0.8em;
-  content: '';
-  border: solid white;
-  border-width: 0 0.125em 0.125em 0;
-  -ms-transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-/* Show the checkmark when checked */
-.input:checked ~ .checkmark::after {
-  display: block;
+  &:checked + .control .icon {
+    transform: scale(1);
+  }
 }
 
 .label {
-  margin-left: 0.3em;
+  margin-top: 2px;
 }
