--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -37,6 +37,11 @@ body {
   text-rendering: optimizeSpeed;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 a:not([class]) {
   text-decoration-skip-ink: auto;
 }
